Revision history for Perl extension Encode::ZapCP1252

0.11
      - Removed bogus test.out file from the distribution. No idea how that
        got in there.
      - Added Module::Build to `build_requires`.
      - Fixed another Perl 5.6.2 test failure reported by David Golden.

0.10  2008-05-02T18:32:27
      - Added `fix_cp1252()`, which converts CP1252 gremlins to their UTF-8
        equivalents.
      - Made the character mapping hashes into `our` variables, instead of
        lexicals, so that they can be messed with externally. Suggested by
        Max Maischen.
      - Added link to source code repository.
      - Now requiring Perl 5.6.2 or greater.

0.02  2008-05-02T04:50:04
      - Fixed documentation typo.
      - Added the "configure_requires", and "recommends" parameters to
        Build.PL.
      - Fixed compatibility issue with Perl 5.6.2.

0.01  2005-10-04T23:20:26
      - Initial public release.