@@ -3,8 +3,9 @@ Revision history for Perl extension Encode::ZapCP1252
 0.11
       - Removed bogus test.out file from the distribution. No idea how that
         got in there.
-      - Added Module::Build to `build_requires`.
+      - Added Module::Build to `build_requires` in Build.PL.
       - Fixed another Perl 5.6.2 test failure reported by David Golden.
+      - Added Encode to the `recommends` parameter in Build.PL.
 
 0.10  2008-05-02T18:32:27
       - Added `fix_cp1252()`, which converts CP1252 gremlins to their UTF-8
